--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="index.css">
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 </head>
 <body>
 
+<div id="vis">
+    
+</div>
 
+<script src="scripts/vis.js"></script>
 
 </body>
 </html>
