--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="column">
             <p>Filtering options</p>
             <input type="number" id="connect_days" name="connect_days" value="28" >
-            <label for="connect_days">Connect points within <span id="connect_days_value">28</span> days</label><br>
+            <label for="connect_days">Show streaks of <span id="connect_days_value">28</span> days</label><br>
             <input type="text" id="team_filter" name="team_filter" value="" >
             <label for="team_filter">Filter by team name (substring)</label><br>
             <input type="text" id="title_filter" name="title_filter" value="" >
