--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <label for="team_filter">Filter by team name (substring)</label><br>
             <input type="text" id="title_filter" name="title_filter" value="" >
             <label for="title_filter">Filter by competition title (substring)</label>
+            <input type="text" id="country_filter" name="country_filter" value="" >
+            <label for="country_filter">Filter by country (substring)</label>
         </div>
         <div class="column">
             <p>Compare teams directly (fulltext only)</p>
