--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="text" id="team_filter" name="team_filter" value="" >
             <label for="team_filter">Filter by team name (substring)</label><br>
             <input type="text" id="title_filter" name="title_filter" value="" >
-            <label for="title_filter">Filter by competition title (substring)</label>
+            <label for="title_filter">Filter by competition title (substring)</label><br>
             <input type="text" id="country_filter" name="country_filter" value="" >
             <label for="country_filter">Filter by country (substring)</label>
         </div>
